--- a/main.ipynb
+++ b/main.ipynb
@@ -146,7 +146,7 @@
     "# We will cluster our data into approximated points with the following logic:\n",
     "\n",
     "\"\"\"\n",
-    "Choose an arbitrary dimension, then go from intervals [min < X < max], look at all data points within interval (X#, X#+1) then generate averages for each cluster\n",
+    "Choose an arbitrary dimension, then go from intervals of desired length, look at all data points within interval, then generate averages for each cluster detected\n",
     "\"\"\"\n",
     "\n",
     "# First sort our data set given the row we choose (usually the variable we are most interested in)\n",
