Output clean up

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,91 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.2.2)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.9.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.0.0)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.5.0)\n",
-      "Requirement already satisfied: scipy in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.13.1)\n",
-      "Requirement already satisfied: seaborn in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.13.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Could not find a version that satisfies the requirement mpl_toolkits (from versions: none)\n",
-      "ERROR: No matching distribution found for mpl_toolkits\n",
-      "\n",
-      "[notice] A new release of pip is available: 23.2.1 -> 24.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install pandas matplotlib numpy scikit-learn scipy seaborn mpl_toolkits ipympl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: ipympl in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.9.4)\n",
-      "Requirement already satisfied: ipython-genutils in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ipympl) (0.2.0)\n",
-      "Requirement already satisfied: ipython<9 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from ipympl) (8.20.0)\n",
-      "Requirement already satisfied: ipywidgets<9,>=7.6.0 in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ipympl) (8.1.3)\n",
-      "Requirement already satisfied: matplotlib<4,>=3.4.0 in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ipympl) (3.9.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ipympl) (2.0.0)\n",
-      "Requirement already satisfied: pillow in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ipympl) (10.3.0)\n",
-      "Requirement already satisfied: traitlets<6 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from ipympl) (5.14.1)\n",
-      "Requirement already satisfied: decorator in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from ipython<9->ipympl) (5.1.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from ipython<9->ipympl) (0.19.1)\n",
-      "Requirement already satisfied: matplotlib-inline in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from ipython<9->ipympl) (0.1.6)\n",
-      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from ipython<9->ipympl) (3.0.43)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from ipython<9->ipympl) (2.17.2)\n",
-      "Requirement already satisfied: stack-data in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from ipython<9->ipympl) (0.6.3)\n",
-      "Requirement already satisfied: colorama in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from ipython<9->ipympl) (0.4.6)\n",
-      "Requirement already satisfied: comm>=0.1.3 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from ipywidgets<9,>=7.6.0->ipympl) (0.2.1)\n",
-      "Requirement already satisfied: widgetsnbextension~=4.0.11 in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ipywidgets<9,>=7.6.0->ipympl) (4.0.11)\n",
-      "Requirement already satisfied: jupyterlab-widgets~=3.0.11 in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ipywidgets<9,>=7.6.0->ipympl) (3.0.11)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (1.2.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (4.53.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (1.4.5)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (23.2)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\willi\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (3.1.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from matplotlib<4,>=3.4.0->ipympl) (2.8.2)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from jedi>=0.16->ipython<9->ipympl) (0.8.3)\n",
-      "Requirement already satisfied: wcwidth in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython<9->ipympl) (0.2.13)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.7->matplotlib<4,>=3.4.0->ipympl) (1.16.0)\n",
-      "Requirement already satisfied: executing>=1.2.0 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from stack-data->ipython<9->ipympl) (2.0.1)\n",
-      "Requirement already satisfied: asttokens>=2.1.0 in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from stack-data->ipython<9->ipympl) (2.4.1)\n",
-      "Requirement already satisfied: pure-eval in c:\\users\\willi\\appdata\\roaming\\python\\python312\\site-packages (from stack-data->ipython<9->ipympl) (0.2.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 23.2.1 -> 24.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install ipympl\n"
    ]
@@ -297,10 +224,6 @@
     "    return cluster_centers.tolist()\n",
     "\n",
     "\n",
-    "# fig = plt.figure(figsize=(10, 6))\n",
-    "# ax = fig.add_subplot(111, projection='3d')\n",
-    "# scatter = ax.scatter(all_data_points_df['father'], all_data_points_df['mother'], all_data_points_df['childHeight'], c=all_labels, cmap='viridis', marker='o')\n",
-    "\n",
     "\n",
     "\n",
     "# Generate chunks\n",
@@ -317,7 +240,7 @@
     "\n",
     "# Plotting the cluster averages\n",
     "x_values = [avg[0] for avg in cluster_averages] \n",
-    "y_values = [avg[1] for avg in cluster_averages]  # Assuming cluster averages are 1D, adjust if they are multidimensional\n",
+    "y_values = [avg[1] for avg in cluster_averages]  \n",
     "z_values = [avg[2] for avg in cluster_averages]\n",
     "\n",
     "ax.scatter(x_values, y_values, z_values, color='blue')\n",
@@ -330,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each shade of red above is denoted as a separate cluster which has its own approximation vector"
+    "Each shade of red above is denoted as a separate cluster which has its own approximation vector."
    ]
   },
   {
@@ -442,7 +365,7 @@
     "\n",
     "\n",
     "\n",
-    "# Example usage\n",
+    "# Generate the sorted list of approximation vectors\n",
     "data = data_csv_sorted[['father', 'mother', 'childHeight']].values\n",
     "sorted_approx_vectors = generate_approximation_vectors(data, cluster_averages)\n",
     "\n",
