--- a/main.ipynb
+++ b/main.ipynb
@@ -601,7 +601,7 @@
     "\n",
     "More optimizations that could be made:\n",
     "- Unlike linear regression, we cannot extrapolate on data, this could be solved potentially by extending the beginning and final connection lines\n",
-    "- We could recursively add approximation points in the centers of each connection, than perform more rounds of gradient descent to more closely approach the most efficient hypothesis\n",
+    "- We could recursively add approximation points in the centers of each connection, then perform more rounds of gradient descent to more closely approach the most efficient hypothesis\n",
     "- compare training data vs testing data loss and stop early before overfitting occurs\n",
     "- We sort everything by a single dimension before adding approximation vectors, but we could minimize loss by testing more than just the dimensions (we could cluster the data at an angle by having multiple dimensions be included in a value equation for sorting) -> (instead of sort by a single x,y, or z dimension... we could sort with the lowest to greatest [1.5x + 6y -2z] or any other combination)\n",
     "\n",
