--- a/main.ipynb
+++ b/main.ipynb
@@ -607,7 +607,7 @@
     "\n",
     "\n",
     "\n",
-    "I can contacted via william.jamesstobaugh@gmail.com for any comments, questions, or inquiries.\n"
+    "I can be contacted via william.jamesstobaugh@gmail.com for any comments, questions, or inquiries.\n"
    ]
   }
  ],
